name:                 czar
version:              0.1.0
synopsis:             
description:          
license:              OtherLicense
license-file:         LICENSE
category:             
stability:            Experimental
build-type:           Simple
cabal-version:        >= 1.10

author:               Brendan Hay <brendan.g.hay@gmail.com>
maintainer:           Brendan Hay <brendan.g.hay@gmail.com>
homepage:             http://github.com/brendanhay/czar
bug-reports:          http://github.com/brendanhay/czar/issues

extra-source-files:   README.md

source-repository head
  type:               git
  location:           git://github.com/brendanhay/czar.git

executable czar
  main-is:            Main.hs
  hs-source-dirs:     src

  default-language:   Haskell2010
  default-extensions: FlexibleInstances
                    , OverloadedStrings
                    , RecordWildCards
                    , TypeSynonymInstances

  ghc-options:       -Wall
                     -O2
                     -rtsopts
                     -threaded
                     -fwarn-tabs
                     -funbox-strict-fields
                     -fno-warn-unused-do-bind

  ghc-prof-options:  -Wall
                     -prof
                     -fprof-auto
                     -auto-all
                     -with-rtsopts=-hc

  build-depends:      base > 4 && < 5
                    , text
                    , transformers
                    , parsec
                    , readline
